## Process this file with automake to generate Makefile.in

INCLUDES += -I$(top_srcdir)/lib

bin_PROGRAMS = gkinfo # gkgen
# sbin_PROGRAMS = gksign

gkinfo_SOURCES = gkinfo.c
gkinfo_LDADD = $(GALE_LIBS)

# gkgen_SOURCES = gkgen.c
# gkgen_LDADD = $(GALE_LIBS)

# gksign_SOURCES = gksign.c
# gksign_LDADD = $(GALE_LIBS)

EXTRA_DIST = ROOT
